--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+/* FONTS IMPORTS */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -9,4 +13,8 @@
 }
 body {
   background-color: #1a1d2d;
+  font-family: 'Inter', sans-serif;
+}
+::-webkit-scrollbar {
+  display: none;
 }
